<resources>
    <string name="app_name">PerfectWeekend</string>
    <string name="storage_button">Image from storage</string>
    <string name="take_photo_button">Take a photo</string>
    <string name="description_textview">Description (optional)</string>
    <string name="name_textview">Location name</string>
    <string name="pick_location_textview">Pick a location</string>
    <string name="location_tag_textview">Location:</string>
    <string name="save_button">Save</string>
    <string name="add_location_title">Add new location</string>
    <string name="edit_location_title">Edit location</string>
    <string name="missing_input">Please add required input.</string>
    <string name="editor_insert_location_failed">Error with saving location.</string>
    <string name="editor_insert_location_successful">Location saved.</string>
    <string name="editor_update_game_failed">Error with updating location.</string>
    <string name="editor_update_game_successful">Location updated.</string>
    <string name="action_delete">Delete</string>
    <string name="action_edit">Edit</string>
    <string name="delete_dialog_msg">Delete the location?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="delete_location_failed">Error deleting location!</string>
    <string name="delete_location_successful">Location deleted.</string>
    <string name="title_activity_detail">Detail</string>
    <string name="keep_editing">Keep editing</string>
    <string name="discard">Discard</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="location_image_content_description">location image</string>
    <string name="add_location_content_description">add location</string>
    <string name="image_preview_content_description">image preview</string>
    <string name="mainactivity_title">PerfectWeekend</string>
    <string name="action_share">Share</string>
    <string name="no_data_available">Please tap the sun to add a favorite location.</string>
    <string name="widget_title">My favorite places</string>
</resources>
