<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorBackground" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/empty_imageview"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:gravity="center"
                    android:visibility="gone"
                    android:layout_marginBottom="8dp"
                    android:contentDescription="@string/image_preview_content_description"
                    app:srcCompat="@drawable/ic_crop_original_black_24dp" />

                <TextView
                    android:id="@+id/empty_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:gravity="center"
                    android:visibility="gone"
                    android:textSize="15sp"
                    android:fontFamily="serif"
                    android:textStyle="italic"
                    android:text="@string/no_data_available" />

            </LinearLayout>

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/fab"
                android:src="@drawable/fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/add_location_content_description"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_margin="16dp" />

        </RelativeLayout>

</RelativeLayout>